kiali istio component status update

--- a/infrastructure/kiali/release.yaml
+++ b/infrastructure/kiali/release.yaml
@@ -65,12 +65,12 @@ spec:
           - app_label: istiod
             is_core: true
             is_proxy: false
-          - app_label: istio-ingressgateway
-            is_core: false
-            is_proxy: false
-          - app_label: istio-egressgateway
-            is_core: false
-            is_proxy: false
+          # - app_label: istio-ingressgateway
+          #   is_core: false
+          #   is_proxy: false
+          # - app_label: istio-egressgateway
+          #   is_core: false
+          #   is_proxy: false
       tracing:
         auth:
           ca_file: ''
