--- a/infrastructure/jaeger/release.yaml
+++ b/infrastructure/jaeger/release.yaml
@@ -81,3 +81,6 @@ spec:
       enabled: true
       podAnnotations:
         sidecar.istio.io/inject: "false"
+    kafka:
+      podAnnotations:
+        sidecar.istio.io/inject: "false"
