--- a/infrastructure/grafana/release.yaml
+++ b/infrastructure/grafana/release.yaml
@@ -14,7 +14,7 @@ spec:
         namespace: flux-system
   dependsOn:
   - name: istio-discovery
-  - name: jaeger
+  # - name: jaeger
   interval: 5m
   values:
     podAnnotations:
