--- a/infrastructure/jaeger/release-elasticsearch.yaml
+++ b/infrastructure/jaeger/release-elasticsearch.yaml
@@ -1,7 +1,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: jaeger
+  name: jaeger-elasticsearch
   namespace: istio-system
 spec:
   releaseName: jaeger-elasticsearch
