jaeger -ingester - disable storage provision

--- a/infrastructure/jaeger/release-ingester.yaml
+++ b/infrastructure/jaeger/release-ingester.yaml
@@ -18,8 +18,8 @@ spec:
   values:
     provisionDataStore:
       cassandra: false
-      elasticsearch: true
-      kafka: true
+      elasticsearch: false
+      kafka: false
     storage:
       type: elasticsearch
       elasticsearch:
