--- a/infrastructure/jaeger/release-kafka.yaml
+++ b/infrastructure/jaeger/release-kafka.yaml
@@ -20,6 +20,8 @@ spec:
       cassandra: false
       elasticsearch: false
       kafka: true
+    storage:
+      type: elasticsearch
     agent:
       enabled: false
     query:
