--- a/clusters/development-eu-west-1/apps.yaml
+++ b/clusters/development-eu-west-1/apps.yaml
@@ -1,4 +1,4 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+apiVersion: kustomize.toolkit.fluxcd.io
 kind: Kustomization
 metadata:
   name: apps
