--- a/infrastructure/istio/release-discovery.yaml
+++ b/infrastructure/istio/release-discovery.yaml
@@ -1,4 +1,4 @@
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: istio-discovery
@@ -12,7 +12,7 @@ spec:
         name: istio
         namespace: flux-system
   dependsOn:
-  - name: istio-base
+    - name: istio-base
   interval: 5m
   values:
     pilot:
