--- a/infrastructure/ingress-nginx/ingress-nginx.yaml
+++ b/infrastructure/ingress-nginx/ingress-nginx.yaml
@@ -6,30 +6,34 @@ spec:
   releaseName: ingress-nginx
   chart:
     spec:
-      chart: ./charts/ingress-nginx
+      chart: ingress-nginx
+      version: 4.7.0
       sourceRef:
-        kind: GitRepository
-        name: ingress-nginx
+        kind: HelmRepository
+        name: ingress-controller
         namespace: flux-system
+      interval: 1m
   interval: 5m
   values:
     controller:
       ingressClass: nginx
+      allowSnippetAnnotations: true
       podAnnotations:
         # Do not redirect inbound traffic to Envoy.
         traffic.sidecar.istio.io/includeInboundPorts: ""
         traffic.sidecar.istio.io/excludeInboundPorts: "80,443"
         # Exclude outbound traffic to kubernetes master from redirection.
-        traffic.sidecar.istio.io/excludeOutboundIPRanges: "10.0.0.0/8"
-        sidecar.istio.io/inject: "true"
+        traffic.sidecar.istio.io/excludeOutboundIPRanges: "10.96.0.1/32"
+        # sidecar.istio.io/inject: "true"
       admissionWebhooks:
         patch:
-          enabled: true
-          image:
-            repository: docker.io/jettech/kube-webhook-certgen
-            tag: v1.5.1
-            pullPolicy: IfNotPresent
           podAnnotations:
             sidecar.istio.io/inject: "false"
-          runAsUser: 2000
       replicaCount: 1
+      service:
+        enabled: true
+        annotations:
+          service.beta.kubernetes.io/aws-load-balancer-type: nlb
+    env:
+      - name: GODEBUG
+        value: "x509ignoreCN=0"
